Did styling on navbar and fixed alignment on dropdown to right.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
-/* 
-    General Styles
-*/
+.navbar {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,252,14,1) 100%, rgba(0,212,255,1) 100%);
+}
